--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,17 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  background-color: rgb(5, 5, 78);
 }
 
+ul {
+  list-style-type: none;
+}
+
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+}
