--- a/src/components/GoBackBtn/GoBackBtn.module.css
+++ b/src/components/GoBackBtn/GoBackBtn.module.css
@@ -1,15 +1,25 @@
 .link {
-  color: var(--color-white);
-  display: inline-block;
-  letter-spacing: 0.06em;
-  border: 1px solid var(--color-light);
-  border-radius: 4px;
-  margin-bottom: 15px;
-  padding: 12px 18px;
-  transition: background-color var(--animation-cubicBezie);
+  color: #ffffff;
+  text-shadow: 3px 2px 1px #141413;
+  padding: 5px 10px;
+  box-shadow: 3px 3px 2px #030202;
+  border-radius: 5px;
+  border: 1px solid #000000;
+  background: #446af2;
+  transition: all 0.3s linear;
+  text-decoration: none;
 }
 
 .link:hover,
 .link:focus {
-  background-color: var(--color-imageBackground);
+  cursor: pointer;
+  color: #fff7f7;
+  background: #0b0b0c;
+}
+
+.container {
+  display: flex;
+  align-items: start;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
