--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,9 +1,13 @@
 .link {
-  color: black;
-  transition: all 0.3s;
+  color: rgb(248, 208, 11);
+  transition: all 0.3s linear;
   text-decoration: none;
   font-size: 20px;
   font-weight: 600;
+}
+
+.link:hover {
+  text-decoration: underline;
 }
 
 .active {
@@ -12,10 +16,15 @@
 
 .nav {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 8px;
 }
 
 .header {
   width: 100%;
   padding: 10px 5px;
+  -webkit-box-shadow: 0px 20px 23px 0px rgba(70, 19, 171, 0.93);
+  -moz-box-shadow: 0px 20px 23px 0px rgba(70, 19, 171, 0.93);
+  box-shadow: 0px 20px 23px 0px rgba(70, 19, 171, 0.93);
 }
